--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -11,6 +11,7 @@ library(targets) # to keep track of all relevant files
 library(readxl) # import excel files
 library(here) # to set directories without defined paths
 library(papaja) # APA conform output
+library(ggplot2)
 
 # set top level directory to source file
 here::i_am("flag_project_root_CERED.txt")
