--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -7,11 +7,12 @@ csl: apa7.csl
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 
-library(targets) # to keep track of all relevant files
-library(readxl) # import excel files
-library(here) # to set directories without defined paths
-library(papaja) # APA conform output
-library(ggplot2)
+library(targets)    # to keep track of all relevant files
+library(readxl)     # import excel files
+library(here)       # to set directories without defined paths
+library(papaja)     # APA conform output
+library(afex)       # for ANOVA
+library(ggplot2)    # for nice plots
 
 # set top level directory to source file
 here::i_am("flag_project_root_CERED.txt")
