--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -996,7 +996,41 @@ This can be considered preliminary proof-of-concept, as this behavioural pattern
   
   # get all relevant variables -------------------------------------------------
     
-  h2b_data <- cbind(data_SV, dprime["d"], rt["meanrt"])
+  agg_vars <- cbind(data_SV, dprime["d"])
+  h2b_data <- merge(agg_vars, data_nback, by = c("subject", "level"))
+  
+  data_nfc$subject[which(data_nfc$subject == "E12K08")] <- "E12K08_neu"
+  
+  h2b_data <- merge(h2b_data, data_nfc, by = "subject")
+  
+  # include new variable for post-correct trials
+  h2b_data$postcorrect = rep(NA, length(h2b_data$correct))    # add empty column
+      for (z in 1:(length(h2b_data$correct)-1)) {             # for all trials except the very last one
+        if (h2b_data$correct[z] == 1) {                       # if correct, paste correct
+          h2b_data$postcorrect[z+1] <- 1
+        } else if (h2b_data$correct[z] == 0) {                # if not correct, paste incorrect
+          h2b_data$postcorrect[z+1] <- 0
+        } else {
+          h2b_data$postcorrect[z+1] <- NA                     # if empty, leave empty
+        } 
+      }
+    
+  # 512 trials, 8 blocks á 64 trials
+  i <- 1
+  while (i <= nrow(h2b_data)){
+    for (j in 1:64) {
+      h2b_data$trial <- seq(1, 64, 1)
+    }
+    i <- i + 64
+  }
+  
+  h2b_data$postcorrect[h2b_data$trial == "1"] <- 1         # avoid transfer from previous block and subject (first trial of a block is always correct)
+  
+  # get subset for MLM
+  
+  h2b_sub <- droplevels(subset(h2b_data[c("subject", "level", "sv", "d", "correct", "postcorrect", "rt", "nfc")],
+                               subset = !is.na(rt)
+                               & rt > 0.1))
   
   # center predictors ----------------------------------------------------------
   
@@ -1006,66 +1040,78 @@ This can be considered preliminary proof-of-concept, as this behavioural pattern
   # > CWC
   
   # d'
-  h2b_data$d.mwc <- ave(h2b_data$d, h2b_data$subject, FUN = function(x) mean(x, na.rm = T))
-  h2b_data$d.cwc <- h2b_data$d - h2b_data$d.mwc
+  h2b_sub$d.mwc <- ave(h2b_sub$d, h2b_sub$subject, FUN = function(x) mean(x, na.rm = T))
+  h2b_sub$d.cwc <- h2b_sub$d - h2b_sub$d.mwc
   
-  # mRT
-  h2b_data$meanrt.mwc <- ave(h2b_data$meanrt, h2b_data$subject, FUN = function(x) mean(x, na.rm = T))
-  h2b_data$meanrt.cwc <- h2b_data$meanrt - h2b_data$meanrt.mwc
+  # RT
+  h2b_sub$rt.mwc <- ave(h2b_sub$rt, h2b_sub$subject, FUN = function(x) mean(x, na.rm = T))
+  h2b_sub$rt.cwc <- h2b_sub$rt - h2b_sub$rt.mwc
   
   # level
-  h2b_data$level.mwc <- ave(h2b_data$level, h2b_data$subject, FUN = function(x) mean(x, na.rm = T))
-  h2b_data$level.cwc <- h2b_data$level - h2b_data$level.mwc
+  h2b_sub$level.mwc <- ave(h2b_sub$level, h2b_sub$subject, FUN = function(x) mean(x, na.rm = T))
+  h2b_sub$level.cwc <- h2b_sub$level - h2b_sub$level.mwc
   
-  ## no level 2 predictors
+  # correct 
+  h2b_sub$correct.mwc <- ave(h2b_sub$correct, h2b_sub$subject, FUN = function(x) mean(x, na.rm = T))
+  h2b_sub$correct.cwc <- h2b_sub$correct - h2b_sub$correct.mwc
+
+  # postcorrect
+  h2b_sub$postcorrect.mwc <- ave(h2b_sub$postcorrect, h2b_sub$subject, FUN = function(x) mean(x, na.rm = T))
+  h2b_sub$postcorrect.cwc <- h2b_sub$postcorrect - h2b_sub$postcorrect.mwc
+  
+  ## level 2 predictor
+  # > CGM
+
+  # NFC
+  h2b_sub$nfc.cgm <- scale(h2b_sub$nfc, scale = F)
+  
   
   # null model -----------------------------------------------------------------
   m0_h2b <- lmer(sv ~ 1 + (1|subject), 
-                 data = h2b_data)
+                 data = h2b_sub)
   
   # intraclass correlation (ICC)
   # % of variance can be explained by differences between persons
   var_m0_h2b <- as.data.frame(VarCorr(m0_h2b))
   icc_h2b <- var_m0_h2b$vcov[1] / (var_m0_h2b$vcov[1] + var_m0_h2b$vcov[2]) 
   
+  
   # random slopes model --------------------------------------------------------
   
   ## maximal model ---- 
   
-  m1_h2b <- lmer(sv ~ level.cwc + d.cwc + meanrt.cwc + (level.cwc|subject), 
-                 data = h2b_data,
+  m1_h2b <- lmer(sv ~ level.cwc * nfc.cgm + d.cwc + rt.cwc + correct.cwc + postcorrect.cwc + (level.cwc|subject), 
+                 data = h2b_sub,
                  REML = T) # parameters estimated by maximizing restricted log-likelihood
   
-  # (1) if a warning message is produced, check random effects
-    summary(m1_h2b)$varcor
-    # (11) if all SDs are different from 0 and correlations look good (unequal to zero)
-      # this message should be a false positive and this model can be reported
-    # (12) if (11) is not true, check all available optimizers
-      n_cores <- parallel::detectCores()
-      opt_cl <- makeCluster(n_cores, type = "SOCK")
-      clusterEvalQ(opt_cl, library("lme4"))
-      clusterExport(opt_cl, "h2b_data")
-      m1_h2b_all <- allFit(m1_h2b, parallel = "snow", ncpus = n_cores, cl = opt_cl) 
-      stopCluster(opt_cl)
-      summary(m1_h2b_all)$msgs
-      # (121) if an optimizer returns NULL, use this optimizer and recalculate model to get the final model
-  
-  # (2) if (121) is not true OR a singular fit message occurs, check for potential outliers and recalculate
-    potential_outliers_m1_h2b <- subset(h2b_data, abs(scale(resid(m1_h2b))) > 3)    
-    percentage_outliers <- 100/nrow(h2b_data) * nrow(potential_outliers_m1_h2b)
-    # get new subset excluding outliers
-    h2b_data_norm <- droplevels(subset(h2b_data, abs(scale(resid(m1_h2b))) < 3))
-    # start with (1) again
-  
-  # (3) if (1) and (2) do not help, start reducing the model stepwise
   
   ## plot model fit of the final model ----
-  plot_model(mfinal_h2b, type = "diag")
+  library(sjPlot)
+  plot_model(m1_h2b, type = "diag")
   
-  # FIXME: do we want to include  a table like Table 3. in Westbrook et al.?
-    # if we decide to include a table of mlm results, I propose to include a table with
-    # term/parameter - Beta - SE - p-value - random effects (SD)
   
+  # simple slopes analysis -----------------------------------------------------
+  library(interactions)
+  
+  m1_h2b.ss <- sim_slopes(m1_h2b, pred = level.cwc, modx = nfc.cgm, centered = "none", 
+                    cond.int = T,                                       # print conditional intercepts
+                    johnson_neyman = T, jnplot = T, control.fdr = T)    # calculate Johnson Neyman intervals, 
+                                                                        # create plot, adjust false discovery rate
+  library(huxtable)
+  as_huxtable(m1_h2b.ss)
+  
+  plot(m1_h2b.ss)
+  
+  interact_plot(m1_h2b, pred = level.cwc, modx = nfc.cgm, centered = "none",
+                x.label = "n back load level", y.label = "subjective value", legend.main = "NFC", interval = T) + theme_apa() 
+  
+  names(summary(m1_h2b))
+  m1_h2b.fixef <- summary(m1_h2b)$coefficients
+  m1_h2b.ranef <- as.data.frame(summary(m1_h2b)$varcor)
+  write.csv2(te.norm.fixef, file = "S4_te.norm.fixef.csv")
+  write.csv2(te.norm.ranef, file = "S4_te.norm.ranef.csv")
+  
+
   # TODO: Corinna go on here :) 
     # -> get results for reporting
     # -> get means for plotting, plot results (if requested)
@@ -1083,6 +1129,10 @@ This can be considered preliminary proof-of-concept, as this behavioural pattern
 ```
 
 ### Changes in subjective values depend reliably on n-back level
+
+intraclass correlation "icc_h2b"
+table withterm/parameter - Beta - SE - p-value - random effects (SD)
+huxtable?
 
 ```{r Hypothesis_3a, echo=FALSE, message=FALSE, warning=FALSE}
 
